@@ -2,13 +2,24 @@ package com.bachhoanhanh.gatewayservice.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
-import org.springframework.security.oauth2.server.resource.authentication.ReactiveJwtAuthenticationConverterAdapter;
+
+import org.springframework.security.oauth2.server.resource.web.server.authentication.ServerBearerTokenAuthenticationConverter;
 import org.springframework.security.web.server.SecurityWebFilterChain;
-import org.springframework.http.HttpMethod;
+import org.springframework.security.web.server.authentication.HttpStatusServerEntryPoint;
+import reactor.core.publisher.Mono;
+import org.springframework.core.convert.converter.Converter;
+import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 import java.util.List;
 import java.util.Map;
@@ -22,77 +33,59 @@ public class SecurityConfig {
     public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http) {
         http
                 .csrf(csrf -> csrf.disable())
+                .oauth2ResourceServer(oauth -> oauth
+                        // Use our custom converter to handle Keycloak roles
+                        .jwt(jwt -> jwt.jwtAuthenticationConverter(grantedAuthoritiesExtractor()))
+                        .bearerTokenConverter(exchange -> {
+                            ServerBearerTokenAuthenticationConverter delegate =
+                                    new ServerBearerTokenAuthenticationConverter();
+                            return delegate.convert(exchange)
+                                    .onErrorResume(e -> Mono.empty()); // missing token → anonymous
+                        })
+                        .authenticationEntryPoint(
+                                new HttpStatusServerEntryPoint(HttpStatus.UNAUTHORIZED)
+                        )
+                )
                 .authorizeExchange(exchange -> exchange
-                        // ===== USERS =====
+                        // --- Swagger / API docs ---
+                        .pathMatchers("/swagger-ui.html", "/swagger-ui/**", "/v3/api-docs/**", "/aggregate/**", "/webjars/**").permitAll()
+
+                        // --- Users ---
                         .pathMatchers(HttpMethod.POST, "/users/register").permitAll()
                         .pathMatchers(HttpMethod.POST, "/users/staff").hasRole("ADMIN")
                         .pathMatchers(HttpMethod.DELETE, "/users/**").hasRole("ADMIN")
                         .pathMatchers("/users/**").authenticated()
 
-                        // ===== PRODUCTS (Mới & Cũ) =====
-                        .pathMatchers(HttpMethod.GET, "/products/**").permitAll()
-                        .pathMatchers("/products/**").authenticated()
+                        // --- Products & Others ---
+                        .pathMatchers(HttpMethod.GET, "/products/**", "/attribute-types/**", "/prototypes/**", "/brands/**", "/catalogs/**").permitAll()
+                        .pathMatchers("/products/**", "/attribute-types/**", "/prototypes/**", "/brands/**", "/catalogs/**").authenticated()
 
-                        // ===== ATTRIBUTE TYPES (Mới thêm) =====
-                        .pathMatchers(HttpMethod.GET, "/attribute-types/**").permitAll()
-                        .pathMatchers("/attribute-types/**").authenticated()
+                        // --- Orders & Payments ---
+                        .pathMatchers("/orders/**", "/payments/**").authenticated()
 
-                        // ===== PROTOTYPES (Mới thêm) =====
-                        .pathMatchers(HttpMethod.GET, "/prototypes/**").permitAll()
-                        .pathMatchers("/prototypes/**").authenticated()
-
-                        // ===== BRANDS =====
-                        .pathMatchers(HttpMethod.GET, "/brands/**").permitAll()
-                        .pathMatchers("/brands/**").authenticated()
-
-                        // ===== CATALOGS =====
-                        .pathMatchers(HttpMethod.GET, "/catalogs/**").permitAll()
-                        .pathMatchers("/catalogs/**").authenticated()
-
-                        // ===== ORDERS ===== (luôn cần token)
-                        .pathMatchers("/orders/**").authenticated()
-
-                        // ===== PAYMENTS =====
-                        .pathMatchers("/payments/**").authenticated()
-
-                        // Swagger public
-                        .pathMatchers(
-                                "/swagger-ui.html",
-                                "/swagger-ui/**",
-                                "/v3/api-docs/**",
-                                "/aggregate/**",
-                                "/webjars/**"
-                        ).permitAll()
-
+                        // --- Vouchers ---
+                        .pathMatchers(HttpMethod.GET,  "/vouchers/**").permitAll()
+                        .pathMatchers(HttpMethod.POST, "/vouchers/apply").permitAll()
+                        .pathMatchers(HttpMethod.POST, "/vouchers", "/vouchers/**").hasRole("ADMIN")
                         .anyExchange().permitAll()
-                )
-                .oauth2ResourceServer(oauth -> oauth
-                        .jwt(jwt -> jwt.jwtAuthenticationConverter(keycloakJwtAuthenticationConverter()))
                 );
 
         return http.build();
     }
 
-    @Bean
-    public ReactiveJwtAuthenticationConverterAdapter keycloakJwtAuthenticationConverter() {
-        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
-        converter.setJwtGrantedAuthoritiesConverter(jwt -> {
-            Map<String, Object> realmAccess = jwt.getClaimAsMap("realm_access");
-            if (realmAccess == null) {
-                return List.of();
+    private Converter<Jwt, Mono<AbstractAuthenticationToken>> grantedAuthoritiesExtractor() {
+        JwtAuthenticationConverter jwtAuthenticationConverter = new JwtAuthenticationConverter();
+        jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(jwt -> {
+            Map<String, Object> realmAccess = jwt.getClaim("realm_access");
+            if (realmAccess == null || realmAccess.isEmpty()) {
+                return Collections.emptyList();
             }
-
-            Object rolesClaim = realmAccess.get("roles");
-            if (!(rolesClaim instanceof List<?> roles)) {
-                return List.of();
-            }
-
+            @SuppressWarnings("unchecked")
+            Collection<String> roles = (Collection<String>) realmAccess.get("roles");
             return roles.stream()
-                    .filter(String.class::isInstance)
-                    .map(String.class::cast)
                     .map(role -> new SimpleGrantedAuthority("ROLE_" + role))
                     .collect(Collectors.toList());
         });
-        return new ReactiveJwtAuthenticationConverterAdapter(converter);
+        return jwt -> Mono.just(jwtAuthenticationConverter.convert(jwt));
     }
 }
